@startuml

title __CONTROLLERS's Class Diagram__\n

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.administradorController {
            + administradorController()
            + createA()
            + createH()
            + getAdministradorbyUserName()
            + getAdministradores()
            + update()
        }
    }
  }
  

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.carnetController {
            + carnetController()
            + delete()
            + generarCarnet()
            + generarCarnetAlmacenado()
            + getCarnets()
            + getDatosCarnet()
            + update()
            + updateCarnet()
        }
      }
  }
  

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.estudianteController {
            + create()
            + estudianteController()
            + getEstudiantebyUserName()
            + getEstudiantes()
            + getEstudiantes()
            + getEstudiantes()
            + update()
        }
      }
  }
  

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.facultadController {
            + create()
            + delete()
            + facultadController()
            + getFacultades()
            + update()
      }
    }
  }
  

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.planController {
            + createF()
            + delete()
            + getEstudiantesInocular()
            + getPlanes()
            + getPlanesDiarios()
            + getTotalInoculados()
            + getTotalInoculados()
            + planController()
            + update()
        }
    }
  }
  

    namespace uce.proyect {
      namespace controllers {
        class uce.proyect.controllers.usuarioController {
            + delete()
            + getUserbyUserName()
            + getUsers()
            + refeshToken()
            + update()
            + usuarioController()
        }
    }
  }
  

  uce.proyect.controllers.administradorController o-- uce.proyect.service.agreement.AdministradorService : administradorService
  uce.proyect.controllers.administradorController o-- uce.proyect.service.agreement.EmailService : emailService
  uce.proyect.controllers.carnetController o-- uce.proyect.service.agreement.CarnetService : carnetService
  uce.proyect.controllers.carnetController o-- uce.proyect.service.agreement.EmailService : emailService
  uce.proyect.controllers.estudianteController o-- uce.proyect.service.agreement.EmailService : emailService
  uce.proyect.controllers.estudianteController o-- uce.proyect.service.agreement.EstudianteService : estudianteService
  uce.proyect.controllers.facultadController o-- uce.proyect.service.agreement.FacultadService : facultadService
  uce.proyect.controllers.planController o-- uce.proyect.service.agreement.PlanService : planService
  uce.proyect.controllers.usuarioController o-- uce.proyect.service.agreement.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
